<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".fragments.OnlineVisitFragment"
    android:orientation="vertical">

    <TextView
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseConsultancy"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textSize="23sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_first_option"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/_30_minute" />
            <TextView
                android:id="@+id/tv_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3000000"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="end|bottom"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_second_option"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/_30_minute" />
            <TextView
                android:id="@+id/tv_price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3000000"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="end|bottom"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:id="@+id/ll_third_option"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_time3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/_30_minute" />
            <TextView
                android:id="@+id/tv_price3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3000000"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="end|bottom"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>